# GenAI

./: .gitignore  .gitmodules  Home.py  README.md  db_run.py  pyproject.toml  test.py  word_extractor.ipynb
data/generative-ai/lecture-1/: student1.md  student2.md  student3.md  summary_slides.txt  tylers-notes.md
data/generative-ai/lecture-2/: student1.md  student2.md  student3.md  summary_slides.txt  tylers-notes.md
data/generative-ai/lecture-3/: student1.md  student2.md  student3.md  summary_slides.txt  tylers-notes.md
data/generative-ai/lecture-4/: Summary_Updated.txt  student1.md  student2.md  student3.md  summary_slides.txt  tylers-notes.md
data/generative-ai/lecture-5/: tylers-notes.md
data/generative-ai/lecture-6/: buraks-notes.md  students_comparison_tylers-notes.md.txt  tylers-notes.md
data/generative_ai/lecture-1/: tylers-notes.md
data/generative_ai/lecture-3/: tylers-notes.md
data/generative_ai/lecture-5/: tylers-notes.md
data/generative_ai/lecture-6/: tylers-notes.md
db_configs/: .env  db_add.py  db_connection.py  db_run.py  schemas.py
pages/: Comparison.py  Edit.py  View_Database.py  sign_up.py
src/: student_notes_comparison.py  summarise-slides.py
src/genai/: db.py  llm.py  loader.py  scoring.py
src/genai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/genai/db_configs/: db_add.py  db_connection.py  schemas.py
